--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,8 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Wuhan_Guide_Helper"
         tools:targetApi="31">
+
+        <!-- MainActivity -->
         <activity
             android:name=".MainActivity"
             android:exported="true"
@@ -19,10 +21,18 @@
             android:theme="@style/Theme.Wuhan_Guide_Helper">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <!-- ViewpointActivity -->
+        <activity
+            android:name=".ViewpointActivity"
+            android:exported="true"
+            android:label="@string/viewpoint_activity_label"
+            android:theme="@style/Theme.Wuhan_Guide_Helper">
+        </activity>
+
     </application>
 
 </manifest>
