--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <application
+        android:name=".MyApplication"
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
@@ -15,7 +16,7 @@
 
         <!-- MainActivity -->
         <activity
-            android:name=".MainActivity"
+            android:name=".databaseUi.MainActivity"
             android:exported="true"
             android:label="@string/app_name"
             android:theme="@style/Theme.Wuhan_Guide_Helper">
@@ -43,7 +44,7 @@
 
         <!-- ContextActivity -->
         <activity
-            android:name=".ContextActivity"
+            android:name=".databaseUi.ContextActivity"
             android:exported="true"
             android:label="@string/context_activity_label"
             android:theme="@style/Theme.Wuhan_Guide_Helper">
