--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:name=".MyApplication"
         android:allowBackup="true"
@@ -18,7 +20,6 @@
         <activity
             android:name=".databaseUi.MainActivity"
             android:exported="true"
-            android:label="@string/app_name"
             android:theme="@style/Theme.Wuhan_Guide_Helper">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -49,6 +50,15 @@
             android:label="@string/context_activity_label"
             android:theme="@style/Theme.Wuhan_Guide_Helper">
         </activity>
+
+        <activity
+            android:name=".internet.TransferActivity"
+            android:exported="false"
+            android:label="Currency conversion"
+            android:theme="@style/Theme.Wuhan_Guide_Helper">
+        </activity>
+
+
 
     </application>
 
