--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -97,6 +97,11 @@
         </activity>
 
         <activity
+            android:name=".foodActivity.FoodLocation"
+            android:exported="true">
+        </activity>
+
+        <activity
             android:name=".ViewPointActivity.University.UniversityActivity"
             android:exported="true">
         </activity>
